# yakimaWeb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.prod.yml  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  package.json  playwright.config.ts  pyproject.toml  railway.json  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/accounts/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/admin_tools/: apps.py  decorators.py  middleware.py
apps/audit/: admin.py  apps.py  middleware.py  models.py  signals.py  tasks.py
apps/content/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py  views_rss.py
apps/core/: __init__.py  admin.py  celery_routes.py  context_processors.py  imaging.py  models.py  net.py  sitemaps.py  urls.py  validators.py  views.py
apps/delivery/: apps.py  models.py
apps/forum/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/marketplace/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/moderation/: admin.py  apps.py  models.py  tasks.py
apps/notifications/: __init__.py  apps.py  models.py  services.py  signal_hooks.py  tasks.py
apps/operations/: admin.py  apps.py  models.py  urls.py  views.py
apps/tools/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
caddy/: Caddyfile  Dockerfile
config/: api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  dev_sqlite.py  prod.py
delivery/: Dockerfile  README.md  auth.py  config.py  db.py  main.py  requirements.txt  storage.py  validation.py
deploy/: Caddyfile
docs/: ACCESS-MATRIX.md  COPY-STYLE-GUIDE.md  DEBLOAT-2026-05-05.md  FEATURE-AUDIT-2026-05-05.md  ICD.md  MTP.md  REMAINING-WORK.md  RFP.md  RISK-REGISTER.md  RTM.md  RUNBOOK-flyer-keep-alive.md  RUNBOOK.md  SAD.md  SECURITY-AUDIT-2026-05-05.md  SECURITY-FINAL.md  SECURITY-PHASE1.md  SECURITY-PLAYBOOK.md  SPRINT-1-VERIFICATION.md  SRS.md  STATE-OF-THE-PROJECT.md  THREAT-MODEL.md  VISION-AND-SCOPE.md
docs/adr/: 0001-django-monolith.md  0002-arello-for-license-verification.md  0003-gemini-as-ai-provider.md  0004-lead-gen-only-marketplace-v1.md  0005-split-architecture.md  0006-nextjs-app-router.md  0007-caddy-reverse-proxy.md  0008-jwt-httponly-auth.md  0009-pgvector-future-proof.md  0010-delivery-service.md  0011-bff-obscuration.md
docs/launch/: BETA-PROGRAM.md  CRISIS-RESPONSE.md  LAUNCH-CHECKLIST.md  PRESS-KIT.md  STATUS-PAGE.md
docs/obsidian-vault/: README.md
docs/research/: ai-moderation-prompt-injection.md  arello-api-notes.md  cream-palette-from-vrov-1301.md  design-drift-audit-sprint-1.md  design-system-reference.md  platform-guidelines-v1.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  mobile.css  not-found.tsx  robots.ts  (+2 more)
load_tests/: README.md
scripts/: README.md  _placeholder_common.py  generate_avatar_placeholders.py  generate_favicons.py  generate_furniture_remover_samples.py  generate_hero_placeholders.py  generate_post_placeholders.py  generate_service_placeholders.py  generate_thread_placeholders.py  generate_vendor_logo_placeholders.py  keep_awake.ps1  setup_keep_alive.ps1  watchdog.ps1
templates/: base.html
(+431 files in other folders)
