[project]
name = "yakimaweb"
version = "0.1.0"
description = "Yakima Real Estate Hub — Central WA realtor + service marketplace + community."
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-environ>=0.11",
    "django-allauth>=65.0",
    "django-otp>=1.5",
    "qrcode>=7.4",
    "django-axes>=7.0",
    "django-htmx>=1.19",
    "django-extensions>=3.2",
    "django-treebeard>=4.7",
    "django-dirtyfields>=1.9",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "google-genai>=0.3",
    "requests>=2.32",
    "pillow>=10.4",
    "whitenoise>=6.7",
    "gunicorn>=23.0",
    "sentry-sdk>=2.0",
    "django-storages[boto3]>=1.14",
    "boto3>=1.34",
    "django-anymail[postmark]>=12.0",
    "python-slugify>=8.0",
    "bleach>=6.1",
    "markdown>=3.7",
    # DRF + JWT cookie auth + OpenAPI + GraphQL (Sprint 0c split architecture)
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.5",
    "drf-spectacular>=0.27",
    "django-csp>=3.8",
    "django-filter>=24.3",
    "strawberry-graphql-django>=0.51",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "apps",
    "apps.core", "apps.core.api", "apps.core.tests",
    "apps.accounts", "apps.accounts.api", "apps.accounts.services", "apps.accounts.tests",
    "apps.moderation", "apps.moderation.api", "apps.moderation.services", "apps.moderation.tests",
    "apps.audit", "apps.audit.api", "apps.audit.tests",
    "apps.admin_tools", "apps.admin_tools.tests",
    "apps.content", "apps.content.api", "apps.content.services", "apps.content.tests",
    "apps.tools", "apps.tools.api", "apps.tools.services", "apps.tools.tests",
    "apps.forum", "apps.forum.api", "apps.forum.services", "apps.forum.tests",
    "apps.marketplace", "apps.marketplace.api", "apps.marketplace.services", "apps.marketplace.tests",
    "apps.operations", "apps.operations.api", "apps.operations.services", "apps.operations.tests",
    "config", "config.settings",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "responses>=0.25",
    "freezegun>=1.5",
    "ruff>=0.7",
    "djlint>=1.35",
    "django-debug-toolbar>=4.4",
    "ipython>=8.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "static/dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "DJ", "S", "BLE", "RUF"]
ignore = ["S101", "S105", "S106", "DJ001", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "BLE"]
"**/test_*.py" = ["S", "BLE"]
"**/conftest.py" = ["S"]
"**/management/commands/seed_*.py" = ["S311", "E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "--reuse-db -p no:cacheprovider"
testpaths = ["apps", "tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/admin.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
fail_under = 80

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
ignore = "H030,H031"
